...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="Home" title="HomeController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="SwiftyNews" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="1200"/>
...
                        <outlet property="loadingLabel" destination="NZC-dd-Sx1" id="jNc-a4-M2j"/>
                        <outlet property="loadingLabel2" destination="Xb2-uq-yAb" id="ImH-Z2-A9b"/>
                        <outlet property="newsType" destination="dPe-LZ-AXc" id="dF3-26-aPs"/>
                        <outlet property="picture1" destination="AA2-d4-LXG" id="xz0-yD-2uO"/>
                        <outlet property="picture2" destination="8zZ-C6-cWH" id="1eB-jo-ATb"/>
...
            <objects>
                <navigationController id="C42-Bi-agz" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="Rpb-wD-HND"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kH4-0P-pHc">
                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
...
            <objects>
                <navigationController id="p9j-hZ-oQX" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="V4g-6o-9Oh"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZSo-Ya-eVu">
                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzn-MJ-I9a">
                                <rect key="frame" x="120" y="91" width="135" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="status"/>
                                <fontDescription key="fontDescription" name="MuktaMahee-Regular" family="Mukta Mahee" pointSize="21"/>
                                <nil key="textColor"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HCF-VW-I8a">
                                <rect key="frame" x="25" y="172.33333333333334" width="325" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="username"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jM0-10-OEB">
                                <rect key="frame" x="25" y="274.66666666666669" width="325" height="18.333333333333314"/>
                                <accessibility key="accessibilityConfiguration" identifier="password"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bhV-7L-bRG">
                                <rect key="frame" x="25" y="333" width="325" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="login"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Log In"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6c-Yn-ITk">
                                <rect key="frame" x="20" y="294" width="335" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="logout"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Log Out"/>
...
